--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,48 +1,127 @@
-<mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="sap.ui.demo.todo.controller.App" displayBlock="true">
+<mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="sap.ui.demo.todo.controller.App" displayBlock="true"
+	xmlns:f="sap.ui.layout.form" xmlns:l="sap.ui.layout">
 	<Shell>
 		<App>
 			<Page title="{i18n>TITLE}" backgroundDesign="Solid">
-				<subHeader>
-					<Toolbar>
-						<SearchField
-							id="searchTodoItemsInput"
-							liveChange="onSearch"
-							width="100%" />
-					</Toolbar>
-				</subHeader>
 				<content>
-					<Input class="todoInput" id="addTodoItemInput" value="{/newTodo}" placeholder="{i18n>INPUT_PLACEHOLDER}" change="addTodo" />
-					<List id="todoList"
-						items="{ path: '/todos', events: { change: '.updateItemsLeftCount' } }"
+					<f:SimpleForm
+						editable="true"
+						layout="ResponsiveGridLayout"
+						title="New Product">
+						<f:content>
+							<Label text="Name" />
+							<Input value="{/newProduct/name}" />
+							<Label text="Quantity" />
+							<Input value="{/newProduct/quantity}" type="Number" />
+							<Label text="Price" />
+							<Input value="{/newProduct/price}" type="Number" />
+							<Label text="Avialable" />
+							<CheckBox selected="{/newProduct/available}" />
+							<Label text="" />
+							<Button text="Add" press="onAddNewProduct">
+								<layoutData>
+									<l:GridData span="XL1 L2 M2 S4" />
+								</layoutData>
+							</Button>
+						</f:content>
+					</f:SimpleForm>
+					
+					<Table id="productList"
+						inset="false"
 						mode="MultiSelect"
 						growing="true"
 						growingScrollToLoad="true"
 						showNoData="false"
 						showSeparators="None"
-						rememberSelections="false">
+						rememberSelections="false"
+						items="{
+							path: '/products',
+							sorter: {
+								path: 'Name'
+							},
+							events: { change: '.updateTotalValue' }
+						}">
+						<headerToolbar>
+							<Toolbar>
+								<Title text="Products" level="H2"/>
+								<ToolbarSpacer/>
+								<SearchField
+									id="searchTodoItemsInput"
+									liveChange="onSearch"
+									width="70%" />
+							</Toolbar>
+						</headerToolbar>
 						<infoToolbar>
 							<Toolbar>
-								<Label id="itemsLeftLabel" text="{= ${/itemsLeftCount} === 1 ? ${/itemsLeftCount} + ' ' + ${i18n>ITEM_LEFT} : ${/itemsLeftCount} + ' ' + ${i18n>ITEMS_LEFT} }"/>
+								<Label id="totalValueLabel" text="Total available price value: {/totalValue} EUR"/>
 							</Toolbar>
 						</infoToolbar>
-						<CustomListItem selected="{completed}">
-							<Input class="todoListInput" enabled="{=!${completed}}" value="{title}"/>
-						</CustomListItem>
-					</List>
+						<columns>
+							<Column
+								minScreenWidth="Tablet"
+								demandPopin="true">
+								<Text text="Name" />
+							</Column>
+							<Column
+								minScreenWidth="Tablet"
+								demandPopin="true">
+								<Text text="Quantity" />
+							</Column>
+							<Column
+								minScreenWidth="Tablet"
+								demandPopin="true">
+								<Text text="Price" />
+							</Column>
+							<Column
+								minScreenWidth="Tablet"
+								demandPopin="true">
+								<Text text="Available" />
+							</Column>
+						</columns>
+						<items>
+							<ColumnListItem>
+								<cells>
+									<Text
+										text="{name}"/>
+									<Text
+										text="{quantity}" />
+									<ObjectNumber
+											number="{
+												parts:[{path:'price'},{path:'currency'}],
+												type: 'sap.ui.model.type.Currency',
+												formatOptions: {showMeasure: false}
+											}"
+											unit="{currency}" />
+									
+									<ObjectStatus
+											text="{
+												path: 'available',
+												formatter: 'sap.ui.demo.todo.model.Formatter.availableText'
+											}"
+											state="{
+												path: 'available',
+												formatter: 'sap.ui.demo.todo.model.Formatter.availableState'
+											}" />
+									<!-- <Text
+										text="{available}" /> -->
+								</cells>
+							</ColumnListItem>
+						</items>
+					</Table>
 				</content>
 				<footer>
 					<Bar>
 						<contentMiddle>
-							<SegmentedButton selectedKey="all" select="onFilter" class="sapMSegmentedButtonNoAutoWidth">
+							<SegmentedButton selectedKey="all" select="onFilterAvailable" class="sapMSegmentedButtonNoAutoWidth">
 								<items>
 									<SegmentedButtonItem id="filterButton-all" text="All" key="all" />
-									<SegmentedButtonItem id="filterButton-active" text="Active" key="active" />
-									<SegmentedButtonItem id="filterButton-completed" text="Completed" key="completed" />
+									<SegmentedButtonItem id="filterButton-available" text="Available" key="available" />
+									<SegmentedButtonItem id="filterButton-not-available" text="Not Available" key="not-available" />
 								</items>
 							</SegmentedButton>
 						</contentMiddle>
 						<contentRight>
-							<Button id="clearCompleted" enabled="{/itemsRemovable}" icon="sap-icon://delete" text="{i18n>CLEAR_COMPLETED}" press="clearCompleted" />
+							<Button id="clearUnavailable" enabled="{/itemsRemovable}" icon="sap-icon://delete" text="Remove Unavailable" press="clearUnavailable" />
 						</contentRight>
 					</Bar>
 				</footer>
